--- a/Pertemuan2/Prolog/Internal-style.html
+++ b/Pertemuan2/Prolog/Internal-style.html
@@ -10,20 +10,21 @@
     <!-- Style Inline -->
     <div id="main" class="wrap" 
         style="Background-color: #f0f0f0; color: red; font-family: Georgia, 'Times New Roman', Times, serif; font-size: 0.8em;">
-        
+        <h2> Hajimemashita !</h2>
     </div>
 
     <!-- Internal Style sheet -->
     <!-- With tag style -->
     <div id="main2" class="wrap">
         <style>
-            #main{
+            #main2{
                 background-color: red;
-                color: red;
+                color:azure;
                 font-family: Georgia, 'Times New Roman', Times, serif;
                 font-size: 0.8em;
             }
         </style>
+        <h2>Hi my name Henken</h2>
     </div>
 </body>
 </html>
