--- a/Pertemuan2/Prolog/External-Style.html
+++ b/Pertemuan2/Prolog/External-Style.html
@@ -14,5 +14,30 @@
         <h1 id="myname">Bagus Bayu Sasongko</h1>
         <p>I love my Waifu !</p>
     </div>
+
+    <!-- Create Table --> 
+    <table>
+        <thead class="head-table">
+            <tr>
+                <th>Nama</th>
+                <th>NIM</th>
+                <th>Kelas</th>
+            </tr>
+        </thead>
+        <tbody class="body-table">
+            <tr>
+                <td>Henken</td>
+                <td>1810</td>
+                <td>SE-A</td>
+            </tr>
+            <tr>
+                <!-- Inline style more important than External -->
+                <td style="background-color: blue">Yoi</td>
+                <td>1811</td>
+                <td>SE-A</td>
+            </tr>
+        </tbody>
+    </table>
+
 </body>
 </html>
