--- a/Pertemuan2/Prolog/External-Style.html
+++ b/Pertemuan2/Prolog/External-Style.html
@@ -37,6 +37,9 @@
                 <td>SE-A</td>
             </tr>
         </tbody>
+
+        <!-- Link for to Isekai -->
+        <a href="http://otakudesu.tv"> Stream Anime </a>
     </table>
 
 </body>
