--- a/Pertemuan2/Latihan/Portofolio.html
+++ b/Pertemuan2/Latihan/Portofolio.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="navbar">
-        <a href="#" class="nav-title m-5"><h3> My Portofolio</h3></a>
-        <a href="#" class="nav m-5">Bio</a>
-        <a href="#" class="nav m-5">Project</a>
+    <div class="navbar pb-5" style="margin: -10px;">
+        <a href="#" class="nav-title "><h1> My Portofolio</h1></a>
+        <a href="#" class="nav "><h3>PROJECT</h3></a>
+        <a href="#" class="nav "><h3>BIODATA</h3></a>
 
     </div>
     <div class="header">
@@ -19,6 +19,9 @@
     </div>
     <div class="body">
 
-    </div>
+    </div>    
+
+    
+    
 </body>
 </html>
