--- a/Pertemuan2/Latihan/Portofolio.html
+++ b/Pertemuan2/Latihan/Portofolio.html
@@ -7,15 +7,48 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="navbar pb-5" style="margin: -10px;">
-        <a href="#" class="nav-title "><h1> My Portofolio</h1></a>
-        <a href="#" class="nav "><h3>PROJECT</h3></a>
-        <a href="#" class="nav "><h3>BIODATA</h3></a>
-
+    <!-- Navigation Bar -->
+    <div class="navbar">
+        <h2 class="nav-title">PORTOFOLIO</h2>
+        <div class="nav">
+            <a href="#"><h4>PROJECT</h4></a>
+            <a href="#profile"><h4>BIODATA</h4></a>
+        </div>
     </div>
-    <div class="header">
-        <h1>My Portofolio</h1>
-        
+    <!-- /Navigation Bar -->
+    
+    <!-- Jumbotron -->
+    <div class="jumbo-image">
+        <div class="jumbo-title">
+          <h3>Hajimemashite, Watashi no namae wa</h3>
+          <h1>Bagus Bayu Sasongko</h1>
+          <h3>Desu!!!</h3>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="content">
+            <div id="profile">
+                <h1 class="title">BIODATA DIRI</h1>
+                <hr class="line">
+                <img src="asset/itsMe.JPG" alt="Avatar" class="avatar">
+                <h3 class="title2">BAGUS BAYU SASONGKO</h3>
+            </div>
+            <table class="table">
+                <tr>
+                    <td class="p-3">Tempat Tanggal Lahir</td>
+                    <td> : </td>
+                    <td class="p-3">Tegal, 22 Juni 2000</td>
+                </tr>
+                <tr>
+                    <td class="p-3">Status</td>
+                    <td> : </td>
+                    <td class="p-3">Mahasiswa</td>
+                </tr>
+            </table> 
+            <h3 class="title">PENGALAMAN</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab nemo voluptatibus accusamus rem nulla! Aliquam quasi nemo cumque eveniet! Provident ex unde ipsum porro ducimus assumenda quaerat nemo modi. Delectus? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consectetur asperiores magnam ex quia! Eveniet sed provident obcaecati suscipit soluta quae odit natus modi, repellendus laborum est iure ipsam, deleniti dolore.</p>  
+        </div>
     </div>
     <div class="body">
 
