--- a/Pertemuan2/Latihan/Portofolio.html
+++ b/Pertemuan2/Latihan/Portofolio.html
@@ -26,6 +26,7 @@
         </div>
     </div>
 
+    <!-- Body -->
     <div class="container">
         <div class="content">
             <div id="profile">
@@ -46,13 +47,73 @@
                     <td class="p-3">Mahasiswa</td>
                 </tr>
             </table> 
-            <h3 class="title">PENGALAMAN</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab nemo voluptatibus accusamus rem nulla! Aliquam quasi nemo cumque eveniet! Provident ex unde ipsum porro ducimus assumenda quaerat nemo modi. Delectus? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consectetur asperiores magnam ex quia! Eveniet sed provident obcaecati suscipit soluta quae odit natus modi, repellendus laborum est iure ipsam, deleniti dolore.</p>  
+        </div>
+
+        <h3 class="title">PENGALAMAN</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab nemo voluptatibus accusamus rem nulla! Aliquam quasi nemo cumque eveniet! Provident ex unde ipsum porro ducimus assumenda quaerat nemo modi. Delectus? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consectetur asperiores magnam ex quia! Eveniet sed provident obcaecati suscipit soluta quae odit natus modi, repellendus laborum est iure ipsam, deleniti dolore.</p>  
+
+        <div id="Project">
+            <h1 class="title">PROJECT</h1>
+            <hr class="line">
+            <table class="table">
+                <tr>
+                    <td class="p-3">
+                        <div class="card">
+                            <img src="asset/Rin.jpg" alt="Rin" style="widows: 100%;">
+                            <div class="card-inside">
+                                <h4><b>Rin Tohsaka</b></h4>
+                                <p>Architect & Engineer</p>
+                            </div>
+                        </div>
+                    </td>
+                    <td class="p-3">
+                        <div class="card">
+                            <img src="asset/Rin.jpg" alt="Rin" style="widows: 100%;">
+                            <div class="card-inside">
+                                <h4><b>Rin Tohsaka</b></h4>
+                                <p>Architect & Engineer</p>
+                            </div>
+                        </div>
+                    </td>
+                    <td class="p-3">
+                        <div class="card">
+                            <img src="asset/Rin.jpg" alt="Rin" style="widows: 100%;">
+                            <div class="card-inside">
+                                <h4><b>Rin Tohsaka</b></h4>
+                                <p>Architect & Engineer</p>
+                            </div>
+                        </div>
+                    </td>
+                    <td class="p-3">
+                        <div class="card">
+                            <img src="asset/Rin.jpg" alt="Rin" style="widows: 100%;">
+                            <div class="card-inside">
+                                <h4><b>Rin Tohsaka</b></h4>
+                                <p>Architect & Engineer</p>
+                            </div>
+                        </div>
+                    </td>
+                </tr>
+            </table>    
         </div>
     </div>
-    <div class="body">
 
-    </div>    
+    <!-- footer -->
+    <div class="footer">
+        <div>
+            Copyright 2020    
+        </div>
+        <div class="right">
+            Contact Me :
+            <table align="center" border="0">
+                <tr>
+                    <td><a href="https://www.facebook.com/bagus.b.sasongko/"><img src="asset/facebook.png" style="width: 50px;"></a></td>
+                    <td><a href="https://www.instagram.com/bagusbs22/"><img src="asset/instagram.png" style="width: 50px;"></a></td>
+                    <td><a href="https://www.linkedin.com/in/bagus-bayu-5675b4118/"><img src="asset/linkedin.png" style="width: 50px;"></a></td>
+                </tr>
+            </table>
+        </div>
+    </div>
 
     
     
