--- a/Pertemuan2/Latihan/Portofolio.html
+++ b/Pertemuan2/Latihan/Portofolio.html
@@ -11,7 +11,7 @@
     <div class="navbar">
         <h2 class="nav-title">PORTOFOLIO</h2>
         <div class="nav">
-            <a href="#"><h4>PROJECT</h4></a>
+            <a href="#project"><h4>PROJECT</h4></a>
             <a href="#profile"><h4>BIODATA</h4></a>
         </div>
     </div>
@@ -52,7 +52,10 @@
         <h3 class="title">PENGALAMAN</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab nemo voluptatibus accusamus rem nulla! Aliquam quasi nemo cumque eveniet! Provident ex unde ipsum porro ducimus assumenda quaerat nemo modi. Delectus? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consectetur asperiores magnam ex quia! Eveniet sed provident obcaecati suscipit soluta quae odit natus modi, repellendus laborum est iure ipsam, deleniti dolore.</p>  
 
-        <div id="Project">
+
+        <div style="margin: 200px 0px"></div>
+
+        <div id="project">
             <h1 class="title">PROJECT</h1>
             <hr class="line">
             <table class="table">
@@ -61,8 +64,8 @@
                         <div class="card">
                             <img src="asset/Rin.jpg" alt="Rin" style="widows: 100%;">
                             <div class="card-inside">
-                                <h4><b>Rin Tohsaka</b></h4>
-                                <p>Architect & Engineer</p>
+                                <h4><b>Fundamental OOP JAVA </b></h4>
+                                <p>Bagus Bayu Sasongko</p>
                             </div>
                         </div>
                     </td>
@@ -70,8 +73,8 @@
                         <div class="card">
                             <img src="asset/Rin.jpg" alt="Rin" style="widows: 100%;">
                             <div class="card-inside">
-                                <h4><b>Rin Tohsaka</b></h4>
-                                <p>Architect & Engineer</p>
+                                <h4><b>Anime Season PyQt 5</b></h4>
+                                <p>Bagus Bayu Sasongko</p>
                             </div>
                         </div>
                     </td>
@@ -79,8 +82,8 @@
                         <div class="card">
                             <img src="asset/Rin.jpg" alt="Rin" style="widows: 100%;">
                             <div class="card-inside">
-                                <h4><b>Rin Tohsaka</b></h4>
-                                <p>Architect & Engineer</p>
+                                <h4><b>Shinobi</b></h4>
+                                <p>Bagus Bayu Sasongko</p>
                             </div>
                         </div>
                     </td>
@@ -88,8 +91,8 @@
                         <div class="card">
                             <img src="asset/Rin.jpg" alt="Rin" style="widows: 100%;">
                             <div class="card-inside">
-                                <h4><b>Rin Tohsaka</b></h4>
-                                <p>Architect & Engineer</p>
+                                <h4><b>Cerita Rakyat</b></h4>
+                                <p>Bagus Bayu Sasongko</p>
                             </div>
                         </div>
                     </td>
@@ -101,21 +104,16 @@
     <!-- footer -->
     <div class="footer">
         <div>
-            Copyright 2020    
+            &copy; Copyright 2020    
         </div>
-        <div class="right">
+        <div class="contact">
             Contact Me :
-            <table align="center" border="0">
-                <tr>
-                    <td><a href="https://www.facebook.com/bagus.b.sasongko/"><img src="asset/facebook.png" style="width: 50px;"></a></td>
-                    <td><a href="https://www.instagram.com/bagusbs22/"><img src="asset/instagram.png" style="width: 50px;"></a></td>
-                    <td><a href="https://www.linkedin.com/in/bagus-bayu-5675b4118/"><img src="asset/linkedin.png" style="width: 50px;"></a></td>
-                </tr>
-            </table>
+                <div class="mt-5">
+                    <a href="https://www.facebook.com/bagus.b.sasongko/"><img src="asset/facebook.png" style="width: 50px;"></a>
+                    <a href="https://www.instagram.com/bagusbs22/"><img src="asset/instagram.png" style="width: 50px;"></a>
+                    <a href="https://www.linkedin.com/in/bagus-bayu-5675b4118/"><img src="asset/linkedin.png" style="width: 50px;"></a>
+                </div>
         </div>
     </div>
-
-    
-    
 </body>
 </html>
