--- a/Pertemuan2/Latihan/Portofolio.html
+++ b/Pertemuan2/Latihan/Portofolio.html
@@ -28,6 +28,8 @@
 
     <!-- Body -->
     <div class="container">
+        
+        <!-- Profile -->
         <div class="content">
             <div id="profile">
                 <h1 class="title">BIODATA DIRI</h1>
@@ -52,12 +54,14 @@
         <h3 class="title">PENGALAMAN</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab nemo voluptatibus accusamus rem nulla! Aliquam quasi nemo cumque eveniet! Provident ex unde ipsum porro ducimus assumenda quaerat nemo modi. Delectus? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consectetur asperiores magnam ex quia! Eveniet sed provident obcaecati suscipit soluta quae odit natus modi, repellendus laborum est iure ipsam, deleniti dolore.</p>  
 
-
+        <!-- Split -->
         <div style="margin: 200px 0px"></div>
 
+        <!-- Project -->
         <div id="project">
             <h1 class="title">PROJECT</h1>
             <hr class="line">
+            <!-- card -->
             <table class="table">
                 <tr>
                     <td class="p-3">
