--- a/Pertemuan4/Praktikum/index1.html
+++ b/Pertemuan4/Praktikum/index1.html
@@ -17,7 +17,7 @@
     <!-- declaration for jquery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     
-    <!-- script for Javasript -->
+    <!-- script for JQuery -->
     <script>
         //add method functional
         $(document).ready(function(){
